[package]
name = "offset-polygon"
description = "An implementation of the polygon offsetting algorithm using winding numbers"
readme = "README.md"
version = "0.1.0"
authors = ["Andreas Monitzer <andreas@monitzer.com>"]
repository = "https://github.com/anlumo/offset_polygon"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
geo-types = { version = "0.7", default-features = false }
num-traits = "0.2"
